--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="App.css" />
 
-    <title>Natan's Weather App</title>
+    <title>התחזית של נתן</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
